# kosem

./: .gitignore  .hlint.yaml  .typos.toml  README.md  cabal.project  docker-compose.yml  flake.nix  fourmolu.yaml  justfile
kosem-core/: kosem-core.cabal  teyon-core.cabal
kosem-core/src/Database/Kosem/: Record.hs  Record2.hs
kosem-postgresql/: kosem-postgresql.cabal  teyon-postgresql.cabal
kosem-postgresql/main/: Main.hs  TH.hs
kosem-postgresql/scripts/: schema.sql
kosem-postgresql/src/Database/Kosem/PostgreSQL/: Internal.hs
kosem-postgresql/src/Database/Kosem/PostgreSQL/Internal/: Ast.hs  Classes.hs  Connection.hs  Diagnostics.hs  Env.hs  FromField.hs  P.hs  Parser.hs  ParserUtils.hs  PgBuiltin.hs  PgType.hs  Query.hs  Row.hs  Sql.hs  TH.hs  ToField.hs  TypCategory.hs  Type.hs  Typechecker.hs  Types.hs
kosem-postgresql/src/Database/Kosem/PostgreSQL/Internal/Diagnostics/: GHC.hs
kosem-postgresql/src/Database/Kosem/PostgreSQL/Internal/Query/: Internal.hs
kosem-postgresql/src/Database/Kosem/PostgreSQL/Internal/Sql/: Ast.hs  CommandGen.hs  Env.hs  Parser.hs  TH.hs  Typechecker.hs  Types.hs
kosem-postgresql/src/Database/Kosem/PostgreSQL/Schema/: Internal.hs
kosem-postgresql/src/Database/Kosem/PostgreSQL/Schema/Internal/: Parser.hs  TH.hs
kosem-postgresql/test/: test.hs
kosem-postgresql/test/Test/: Db.hs  TH.hs  Utils.hs
kosem-postgresql/test/Test/Database/Kosem/PostgreSQL/: Internal.hs
kosem-postgresql/test/Test/Database/Kosem/PostgreSQL/Internal/: Parser.hs  Sql.hs  ToFromField.hs
kosem-postgresql/test/Test/Database/Kosem/PostgreSQL/Internal/Sql/: Parser.hs  Typechecker.hs
kosem-postgresql/test/Test/Database/Kosem/PostgreSQL/Schema/Internal/: Parser.hs
scripts/: shell-welcome.txt
