cabal-version:   3.8
name:            kosem-postgresql
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Daniel Orłowski
maintainer:      orlowd@gmail.com
category:        Other
build-type:      Simple
extra-doc-files: CHANGELOG.md

common runtime-opts
    ghc-options: -threaded -with-rtsopts=-N

common warning-opts
    ghc-options:
      -fwarn-incomplete-patterns
      -fno-show-error-context

library
  import:
      runtime-opts
    , warning-opts
  exposed-modules:
    , Database.Kosem.PostgreSQL.Internal
    , Database.Kosem.PostgreSQL.Internal.Connection
    , Database.Kosem.PostgreSQL.Internal.ParserUtils
    , Database.Kosem.PostgreSQL.Internal.PgBuiltin
    , Database.Kosem.PostgreSQL.Internal.Types
    , Database.Kosem.PostgreSQL.Internal.Diagnostics
    , Database.Kosem.PostgreSQL.Internal.P
    , Database.Kosem.PostgreSQL.Internal.Diagnostics.GHC
    , Database.Kosem.PostgreSQL.Internal.Row
    , Database.Kosem.PostgreSQL.Internal.FromField
    , Database.Kosem.PostgreSQL.Internal.ToField
    , Database.Kosem.PostgreSQL.Internal.Sql
    , Database.Kosem.PostgreSQL.Internal.Sql.Types
    , Database.Kosem.PostgreSQL.Internal.Sql.TH
    , Database.Kosem.PostgreSQL.Internal.Sql.Ast
    , Database.Kosem.PostgreSQL.Internal.Sql.Parser
    , Database.Kosem.PostgreSQL.Internal.Sql.Typechecker
    , Database.Kosem.PostgreSQL.Internal.Sql.CommandGen
    , Database.Kosem.PostgreSQL.Schema.Internal.Parser
    , Database.Kosem.PostgreSQL.Schema.Internal
    , Database.Kosem.PostgreSQL.Schema.Internal.TH
  build-depends:
      base
    , bluefin
    , megaparsec
    , parser-combinators
    , text
    , bytestring
    , vector
    , ghc
    , template-haskell
    , th-lift
    , postgresql-binary
    , postgresql-libpq
    -- debug:
    , pretty-simple
  default-extensions:
      BlockArguments
    , LambdaCase
    , ImportQualifiedPost
    , OverloadedStrings
    , DerivingVia
  hs-source-dirs:
      src
  default-language:
      GHC2021

test-suite spec
  type:
      exitcode-stdio-1.0
  main-is:
      test.hs
  default-language:
      GHC2021
  other-modules:
    , Test.Database.Kosem.PostgreSQL.Internal.Sql
    , Test.Database.Kosem.PostgreSQL.Internal.Sql.Parser
    , Test.Database.Kosem.PostgreSQL.Internal.ToFromField
    , Test.Database.Kosem.PostgreSQL.Schema.Internal.Parser
    , Test.Database.Kosem.PostgreSQL.Internal
    , Test.TH
    , Test.Utils
    , Test.Db
  hs-source-dirs:
      test
  default-extensions:
      LambdaCase
    , BlockArguments
    , OverloadedStrings
    , ImportQualifiedPost
    , InstanceSigs
    , LambdaCase
    , DataKinds
    , TypeOperators
    , TypeApplications
    , OverloadedRecordDot
  build-depends:
      base >=4.14 && <5
    , kosem-postgresql
    , hspec
    , hspec-contrib
    , hspec-megaparsec
    , hspec-hedgehog
    , hedgehog
    , megaparsec
    , text
    , bytestring
    , vector
    , neat-interpolation
    , template-haskell
    , bluefin
    -- dbg
    , pretty-simple
